--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/index.js": "/index.js",
-    "/style.css": "/style.css"
+    "/public/js/index.js": "/public/js/index.js",
+    "/src/css/style.css": "/src/css/style.css"
 }
